tests/cases/fail_enum_primitive.rs
use strict_typing::strict_types;

#[strict_types]
enum Bad {
    Value(i32),
}

fn main() {}
